# uh-kun

./: .gitignore  README.md  pyproject.toml  tasks.txt
src/uh_kun/: __init__.py  api.py  cli.py  dataset.py  embedding.py  io.py  labels.py  predictor.py  trainer.py  types.py
src/uh_kun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uh_kun/vectordb/: chroma.py
tests/: test_labels.py
